Fixed scrollbar css

--- a/src/assets/sass/components/forms.scss
+++ b/src/assets/sass/components/forms.scss
@@ -502,33 +502,40 @@ nav.steps{
     }
   }
 
-
   /* ### Collapsible ### */
   &.collapsible{
     /* Hidden*/
     right: 0;
-    transform: translateX(45%);
     div{
       @include text-2xs();
       &.scrollToTop, &.scrollToBottom{
         text-align: left;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+      &.scrollSpacer{
+        height: 40px;
       }
       &.scrollToAnchor{
         color: $primary-900;
         height: 5px;
+        display: none;
       }
     }
     /* Visible */
     &:hover {
-      transform: none;
       div {
         @include text-base();
         &.scrollToTop, &.scrollToBottom{
           text-align: center;
         }
+        &.scrollSpacer{
+          display: none;
+        }
         &.scrollToAnchor{
           color: $white;
           height: auto;
+          display: block;
         }
       }
     }
